<resources>
    <string name="app_name">AniPal</string>
    <string name="Title">AniPal</string>
    <string name="title">ANIPAL</string>
    <string name="mood_title">Select Your Mood</string>
    <string name="mood_description">You can customize your watch list according to the mood you choose.</string>

    //buttons
    <string name="next_btn">Next</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in_underlined"><u>Sign In</u></string>
    <string name="sign_up_underlined"><u>Create One!</u></string>
    <string name="forgot_password_underlined"><u>Forgot Password?</u></string>
    <string name="mylists">My Lists</string>

    <string name="mood1">Happy</string>
    <string name="mood2">Sad</string>
    <string name="mood3">Stressed</string>
    <string name="mood4">Bored</string>
    <string name="mood5">Epic</string>
    <string name="mood6">Nostalgic</string>
    <string name="mood7">Romantic</string>
    <string name="mood8">Energetic</string>


    //descriptions
    <string name="description1">your Trusted pal for customizing your favourite anime Watchlists
        and recommendations ...🎭</string>
    <string name="description2">You can create personalized watch lists for your desired anime
        using the categories ...🎭</string>
    <string name="description3">Also with the in built mood selector, you can further customize
        your watch lists ...🎭</string>
    <string name="description4">Your anime journey starts here ...🎭</string>
    <string name="signup_title">Your Journey Begins Now !</string>
    <string name="signin_title">Hey, Welcome Back !</string>
    <string name="forgot_password_title">Forgot your password ?
        No worries😊 !</string>

    //input field labels
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_username">Username</string>
    <string name="label_confirmpas">Confirm Password</string>
    <string name="label_otp">OTP</string>
    <string name="label_new_password">New Password</string>
    <string name="label_search">Search</string>


    <string name="login_link_text">Already have an account?</string>
    <string name="signup_link_text">Don\'t have an account?</string>
    <string name="continue_with_google">Continue with google</string>

    //content descriptions
    <string name="profile_icon">profile icon</string>
    <string name="camera_icon">camera icon</string>
    <string name="logo">logo</string>
    <string name="google_icon_color">google icon color</string>
    <string name="trending">Trending</string>
    <string name="movie">Movie</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="menu">Menu</string>
    <string name="tiles">scroll tiles</string>


    //trending tile titles

    <string name="trending1_title">Solo Leveling</string>
    <string name="trending2_title">Apothecary Diaries</string>
    <string name="trending3_title">Dandadan</string>
    <string name="trending4_title">Frieren</string>
    <string name="trending5_title">My Hero Academia</string>

    //trending tile descriptions
    <string name="trending1_description">Action, Adventure, Fantasy</string>
    <string name="trending2_description">Adventure, Mystery, Slice of life, Drama</string>
    <string name="trending3_description">Action, Adventure,Comedy,  Fantasy</string>
    <string name="trending4_description">Action, Adventure, Fantasy, Slice of life, Comedy</string>
    <string name="trending5_description">Action, Adventure, Sci-Fi, Comedy</string>

    //movies tile titles

    <string name="movie1_title">Tenki No Ko</string>
    <string name="movie2_title">Garden Of Words</string>
    <string name="movie3_title">I Want To Eat
        Your Pancreas</string>
    <string name="movie4_title">Suzume No Tojimari</string>
    <string name="movie5_title">Your Name</string>

    //movies tile descriptions
    <string name="movie1_description">Slice of life, Adventure, Fantasy</string>
    <string name="movie2_description">Slice of life, Romance, Drama</string>
    <string name="movie3_description">Slice of life, Romance, Drama</string>
    <string name="movie4_description">Slice of life, Adventure, Fantasy, Mystery</string>
    <string name="movie5_description">Slice of life, Adventure, Fantasy, Mystery</string>


    //navbar

    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="lists">Lists</string>
    <string name="categories">Categories</string>
    <string name="back">back button</string>
    <string name="Profile">Profile</string>
    <string name="username">John Doe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="list1">Action</string>
    <string name="list5">Wth</string>
    <string name="list4">LOL</string>
    <string name="list3">On the go</string>
    <string name="list2">Adventure</string>
    <string name="recents">Recents</string>

    //recent
    <string name="recent1">Solo Leveling</string>
    <string name="recent2">Monster</string>
    <string name="recent3">Demon Slayer</string>
    <string name="recent4">Dandadan</string>
    <string name="recent5">Violet Evergarden</string>
    <string name="recent6">Gintama</string>

    //synopsis
    <string name="synopsis1">They say whatever doesn’t kill you makes you stronger,
        but that’s not the case for the world’s weakest hunter Seong Jin-U.
        After being brutally slaughtered by monsters in a high-ranking dungeon,
        Jin-U came back with the System, a program only he could see,
        that’s leveling him up in every way. Now,
        he’s inspired to discover the secrets behind his powers and the dungeon that spawned them.</string>

    <string name="synopsis2">They say whatever doesn’t kill you makes you stronger,
        but that’s not the case for the world’s weakest hunter Seong Jin-U.
        After being brutally slaughtered by monsters in a high-ranking dungeon,
        Jin-U came back with the System, a program only he could see,
        that’s leveling him up in every way. Now,
        he’s inspired to discover the secrets behind his powers and the dungeon that spawned them.</string>
</resources>