<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <FrameLayout
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:padding="15dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:contentDescription="@string/back"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_left_arrow" />
    </FrameLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/Profile"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/profile_icon"
        android:contentDescription="@string/profile_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_profile"
        app:layout_constraintTop_toBottomOf="@+id/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/icon_camera"
        android:contentDescription="@string/camera_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:src="@drawable/icon_camera"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_icon_background"
        app:layout_constraintBottom_toBottomOf="@id/profile_icon"
        app:layout_constraintEnd_toEndOf="@id/profile_icon"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/username"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="25sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="@+id/profile_icon"
        app:layout_constraintEnd_toEndOf="@+id/profile_icon"/>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_profile"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="@+id/edit_profile"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile"/>
    <Button
        android:id="@+id/recents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recents"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logout"/>
    <Button
        android:id="@+id/my_lists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mylists"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="85dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_semibold"
        android:backgroundTint="@color/button"
        app:layout_constraintStart_toEndOf="@+id/recents"
        app:layout_constraintTop_toBottomOf="@+id/logout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="525dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/recents"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>