<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/signup_title"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/profile_icon"
        android:contentDescription="@string/profile_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/anipal_logo"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
        android:id="@+id/icon_camera"
        android:contentDescription="@string/camera_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:padding="5dp"
        android:src="@drawable/icon_camera"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_icon_background"
        app:layout_constraintBottom_toBottomOf="@id/profile_icon"
        app:layout_constraintEnd_toEndOf="@id/profile_icon"/>
    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_email"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="@id/email" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="textEmailAddress"
        android:hint="@string/label_email"
        android:autofillHints="emailAddress"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_username"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/username" />
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/label_username"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_password"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/password" />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/label_password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textSize="25sp"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:backgroundTint="@color/button"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_link_text"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintStart_toStartOf="@id/password"/>
    <Button
        android:id="@+id/login_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/sign_in_underlined"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:textColor="@color/light_blue"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/signup"
        app:layout_constraintStart_toEndOf="@id/login_text"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:background="@drawable/rounded_edittext"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/login_link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/continue_with_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textAlignment="center" />

        <ImageView
            android:id="@+id/google_icon_color"
            android:contentDescription="@string/google_icon_color"
            android:src="@drawable/icon_google_color"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>