<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/signin_title"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/profile_icon"
        android:contentDescription="@string/profile_icon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon_profile"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/signup_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_username"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/profile_icon"
        app:layout_constraintStart_toStartOf="@id/username" />
    <EditText
        android:id="@+id/username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="username"
        android:inputType="text"
        android:hint="@string/label_username"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_password"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/username"
        app:layout_constraintStart_toStartOf="@id/password" />
    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:hint="@string/label_password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/forgot_password_underlined"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:textColor="@color/light_blue"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"/>
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:backgroundTint="@color/button"
        app:layout_constraintTop_toBottomOf="@+id/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_link_text"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintStart_toStartOf="@id/password"/>
    <Button
        android:id="@+id/signup_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="9dp"
        android:text="@string/sign_up_underlined"
        android:fontFamily="@font/poppins_semibold"
        android:textSize="15sp"
        android:textColor="@color/light_blue"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintStart_toEndOf="@id/login_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>