<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".OnBoarding4">

    <TextView
        android:id="@+id/description4"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:fontFamily="@font/go3"
        android:text="@string/description4"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="30sp"
        android:layout_gravity="bottom|start"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/go3"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/description4"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30sp"
        android:layout_gravity="bottom|end"
        android:backgroundTint="@color/button"
        android:fontFamily="@font/go3"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/description4"/>


</FrameLayout>