<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <ImageView
        android:id="@+id/menu"
        android:contentDescription="@string/menu"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_menu"
        android:layout_marginTop="75dp"
        android:layout_marginStart="50dp"
        android:padding="2dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
        android:id="@+id/profile"
        android:contentDescription="@string/profile_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/icon_profile"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="50dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/search"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/label_search"
        android:autofillHints="name"
        android:inputType="text"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:padding="5dp"
        app:layout_constraintTop_toBottomOf="@+id/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>