<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg">

    <TextView
        android:id="@+id/forgot_password_title"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/forgot_password_title"
        android:textAlignment="center"
        android:gravity="center"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_email"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
        app:layout_constraintStart_toStartOf="@id/email" />
    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="textEmailAddress"
        android:hint="@string/label_email"
        android:autofillHints="emailAddress"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_otp"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/otp"/>
    <EditText
        android:id="@+id/otp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="number"
        android:hint="@string/label_otp"
        android:autofillHints="text"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_otp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_new_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_new_password"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/otp"
        app:layout_constraintStart_toStartOf="@id/otp"/>
    <EditText
        android:id="@+id/new_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="textPassword"
        android:hint="@string/label_otp"
        android:autofillHints="password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/label_confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/label_confirmpas"
        android:textColor="@color/white"
        android:fontFamily="@font/go3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/new_password"
        app:layout_constraintStart_toStartOf="@id/otp"/>
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:inputType="textPassword"
        android:hint="@string/label_confirmpas"
        android:autofillHints="password"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        app:layout_constraintTop_toBottomOf="@id/label_confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <Button
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/reset_password"
        android:textSize="25sp"
        android:fontFamily="@font/go3"
        android:textColor="@color/white"
        android:backgroundTint="@color/button"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>